Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
 <a href="product.html"><button class="btn btn-primary" style="margin-left: 45%; margin-bottom: 30px;">View All Products</button></a>
     <!-- Products Section -->
-    <!-- <section class="products" id="products">
+    <section class="products" id="products">
         <div class="products-container">
             <h2 class="section-title">New Arrivals</h2>
             
@@ -237,5 +237,6 @@
     <script src="script.js"></script>
 </body>     
 </html>
+
 
  
